klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/audit/AuditDataPropertyTypeErrorTest.klass
package com.errors

enumeration DummyEnumeration
{
    DUMMY_LITERAL,
}

user User systemTemporal versioned
{
    id: DummyEnumeration key userId;
}

class DummyClass systemTemporal versioned audited
{
    id             : Long id key;
    system         : DummyEnumeration system;
    systemFrom     : DummyEnumeration system from;
    systemTo       : DummyEnumeration system to;
    createdById    : DummyEnumeration createdBy userId final private;
    createdOn      : DummyEnumeration createdOn final;
    lastUpdatedById: DummyEnumeration lastUpdatedBy userId private;
}
